demote most warnings to debug messages; execute callback later to allow freeing of connection object
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@407 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,3 @@
 Changes in current version:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.  
+ o demote most http warnings to debug messages
