support setting local address on an evhttp_connection
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@416 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,3 +3,4 @@ Changes in current version:
  o demote most http warnings to debug messages
  o Fix Solaris compilation; from Magne Mahre
  o Add a "Date" header to HTTP responses, as required by HTTP 1.1.
+ o Support specifying the local address of an evhttp_connection using set_local_address
