--- a/ChangeLog
+++ b/ChangeLog
@@ -4,3 +4,4 @@ Changes in current version:
  o Fix Solaris compilation; from Magne Mahre
  o Add a "Date" header to HTTP responses, as required by HTTP 1.1.
  o Support specifying the local address of an evhttp_connection using set_local_address
+ o Fix a memory leak in which failed HTTP connections whould not free the request object
