Make the test/ subdirectory buildable under Windows.  Well, mingw at least.  The tests still don't all pass, but at least now we know that.
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@447 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,3 +22,5 @@ Changes in current version:
  o Fix http module on windows to close sockets properly.
  o Make autogen.sh script run correctly on systems where /bin/sh isn't bash. (Patch from Trond Norbye, rewritten by Hagne Mahre and then Hannah Schroeter.)
  o Skip calling gettime() in timeout_process if we are not in fact waiting for any events. (Patch from Trond Norbye)
+ o Make test subdirectory compile under mingw.
+
