Fix implementation of strsep.
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@457 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,3 +26,4 @@ Changes in current version:
  o Fix win32 buffer.c behavior so that it is correct for sockets (which do not like ReadFile and WriteFile).
  o Make the test.sh script run unit tests for the evpoll method.
  o Make the entire evdns.h header enclosed in "extern C" as appropriate.
+ o Fix implementation of strsep on platforms that lack it
