--- a/ChangeLog
+++ b/ChangeLog
@@ -35,7 +35,7 @@ Changes in current version:
  o added two additional libraries: libevent_core and libevent_extra in addition to the regular libevent.  libevent_core contains only the event core whereas libevent_extra contains dns, http and rpc support
  o Begin using libtool's library versioning support correctly.  If we don't mess up, this will more or less guarantee binaries linked against old versions of libevent continue working when we make changes to libevent that do not break backward compatibility.
  o Fix evhttp.h compilation when TAILQ_ENTRY is not defined.
- o Clean up code in epoll_dispatch() to reduce branch count and generally run better.  Patch from Christopher Layne.
+ o Small code cleanups in epoll_dispatch().
  o Increase the maximum number of addresses read from a packet in evdns to 32.
  o Remove support for the rtsig method: it hasn't compiled for a while, and nobody seems to miss it very much.  Let us know if there's a good reason to put it back in.
  o Rename the "class" field in evdns_server_request to dns_question_class, so that it won't break compilation under C++.  Use a macro so that old code won't break.  Mark the macro as deprecated.
