Make the logic for active events work better with internal events; patch from Christopher Layne
git-svn-id: http://levent.svn.sourceforge.net/svnroot/levent/trunk/libevent@509 ce677c24-8c1a-0410-9497-a30ef3a96221

--- a/ChangeLog
+++ b/ChangeLog
@@ -48,4 +48,4 @@ Changes in current version:
  o Fix many build issues when using the Microsoft C compiler.
  o Remove a bash-ism in autogen.sh
  o When calling event_del on a signal, restore the signal handler's previous value rather than setting it to SIG_DFL. Patch from Christopher Layne.
-
+ o Make the logic for active events work better with internal events; patch from Christopher Layne.
